--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav id="navbar" class="navbar navbar-expand-md navbar-main fixed-top">
 
         <a class="navbar-brand" href="#"><img src="public/img/simitlab.png" width="200" alt=""></a>
-        <a id="nav-collapse-button" class="nav-link no-d-lg " type="button"><i id="bars" class="fas fa-bars"></i></a>
+        <a id="nav-collapse-button" class="nav-link no-d-lg "><i id="bars" class="fas fa-bars"></i></a>
       
         <!-- Navbar links -->
         <div class="no-d-sm">
