--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
                 <div class="row justify-content-center mb-2">
                     <div class="col-10 col-md-8">
                         <br><br>
-                        <p class="text-white"><b>The research topics we are dealing with are related to computer vision, deep learning and machine learning fields. The prospective students must satisfy the following conditions:</b></p>
-                        <p class="text-white">  &#8226; Interest in computer vision and deep learning research <br>
+                        <p class="text-white application-text"><b>The research topics we are dealing with are related to computer vision, deep learning and machine learning fields. The prospective students must satisfy the following conditions:</b></p>
+                        <p class="text-white application-text">  &#8226; Interest in computer vision and deep learning research <br>
                             &#8226; Eager to learn, self-motivated and a team player <br>
                             &#8226; Able to read and write papers in English <br>
                             &#8226; Able to document the produced work well</p>
-                        <p class="text-white"><b>The candidates satisfying the following conditions will be preferred:</b></p>
-                        <p class="text-white">  &#8226; Interest in computer vision and deep learning research <br>
+                        <p class="text-white application-text"><b>The candidates satisfying the following conditions will be preferred:</b></p>
+                        <p class="text-white application-text">  &#8226; Interest in computer vision and deep learning research <br>
                             &#8226; Eager to learn, self-motivated and a team player <br>
                             &#8226; Able to read and write papers in English <br>
                             &#8226; Able to document the produced work well</p>
