--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                             &#8226; Able to document the produced work well</p>
                                    
                     </div>
-                    <div class="col-md-4 align-self-center text-center">
+                    <div class="col-md-4 align-self-center text-center mt-5">
                         <a href="https://goo.gl/forms/wUsTCMWIcZE10JHA2" target="_blank" class="join-button">Apply!</a>
                     </div>
                 </div>
