--- a/projects.html
+++ b/projects.html
@@ -163,14 +163,12 @@
                             <div class="col align-self-center">
                                 <h3 class="project-alt">Start date: November 2013 <br>
                                     End date: November 2017 <br> <br>
-                                    Partner(s): <a href="http://www.cost.eu/domains_actions/ict/Actions/IC1303?management" target="_blank">http://www.cost.eu/domains_actions/ict/Actions/IC1303?management</a> 
-                                    <br><br>
-                                    Abstract: <br>
-                                    <t style="font-weight: 400;">  Ambient Assisted Living (AAL) is an area of research based on Information and Communication Technologies (ICT), medical research, and sociological research. AAL is based on the notion that technology and science can provide improvements in the quality of life for people in their homes, and that it can reduce the financial burden on the budgets of European healthcare providers. The concept of Enhanced Living Environments (ELE) refers to the AAL area that is more related with the Information and Communication Technologies. To design, plan, deploy and operate, an AAL system often comprehends the integration of several scientific areas. The Architectures, Algorithms and Platforms for Enhanced Living Environments (AAPELE) COST Action addresses the issues of defining software, hardware and service architectures for AAL, on studying and creating more efficient algorithms for AAL, particularly those related to the processing of large amounts of data and of biosignals in lossy environments, and on the research of protocols for AAL or, with more detail, on studying communication and data transmission protocols for AAL. This Action aims to promote interdisciplinary research on AAL, through the creation of a research and development community of scientists and entrepreneurs, focusing on AAL algorithms, architectures and platforms, having in view the advance of science in this area and the development of new and innovative solutions. </t>
-                                    <br><br>
-
-
-                                    Sponsors: European Union under European Cooperation in Science and Technology (COST) Programme</h3>
+                                    Abstract: <br> <t style="font-weight: 400;"> Ambient Assisted Living (AAL) is an area of research based on Information and Communication Technologies (ICT), medical research, and sociological research. AAL is based on the notion that technology and science can provide improvements in the quality of life for people in their homes, and that it can reduce the financial burden on the budgets of European healthcare providers. The concept of Enhanced Living Environments (ELE) refers to the AAL area that is more related with the Information and Communication Technologies. To design, plan, deploy and operate, an AAL system often comprehends the integration of several scientific areas. The Architectures, Algorithms and Platforms for Enhanced Living Environments (AAPELE) COST Action addresses the issues of defining software, hardware and service architectures for AAL, on studying and creating more efficient algorithms for AAL, particularly those related to the processing of large amounts of data and of biosignals in lossy environments, and on the research of protocols for AAL or, with more detail, on studying communication and data transmission protocols for AAL. This Action aims to promote interdisciplinary research on AAL, through the creation of a research and development community of scientists and entrepreneurs, focusing on AAL algorithms, architectures and platforms, having in view the advance of science in this area and the development of new and innovative solutions.
+                                        <br> <br>
+                                        <b>Sponsors:</b> European Union under European Cooperation in Science and Technology (COST) Programme
+                                        <br><br>
+                                        <b>Partner(s):</b> <a href="Partner(s): http://www.cost.eu/domains_actions/ict/Actions/IC1303?management" target="_blank">Link</a>
+                                    </h3>
                             </div>
                         </div>
                     </div>
@@ -209,7 +207,7 @@
                             <div class="col align-self-center">
                                 <h3 class="project-alt">Start date: March 2013 <br>
                                     End date: March 2017 <br> <br>
-                                    Partner(s): <a href="http://www.cost.eu/domains_actions/ict/Actions/IC1303?management" target="_blank">http://www.cost.eu/domains_actions/ict/Actions/IC1303?management</a>
+                                    Partner(s): <a href="http://www.cost.eu/domains_actions/ict/Actions/IC1303?management" target="_blank">Link</a>
                                     <br><br>
                                     Sponsors: European Union under European Cooperation in Science and Technology (COST) Programme</h3>
                             </div>
