--- a/index.html
+++ b/index.html
@@ -205,10 +205,12 @@
         <div class="container">
             <div class="row justify-content-center mt-5">
                 <div class="col-12 col-md-6 col-lg-4 mt-2">
-                    <div class="box-app">
-                        <iframe height="560" width="900" class="item-frame" src="http://player.vimeo.com/video/100890130" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
-                        <p class="box-text-app">A Face Recognition Based Multiplayer Mobile Game Application (AIAI 2014)</p>
-                    </div>
+                    <a class="box-app-link" href="http://player.vimeo.com/video/100890130">
+                        <div class="box-app">
+                            <iframe height="560" width="900" class="item-frame" src="http://player.vimeo.com/video/100890130" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
+                            <p class="box-text-app">A Face Recognition Based Multiplayer Mobile Game Application (AIAI 2014)</p>
+                        </div>
+                    </a>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 mt-2">
                     <div class="box-app">
