--- a/index.html
+++ b/index.html
@@ -205,28 +205,32 @@
         <div class="container">
             <div class="row justify-content-center mt-5">
                 <div class="col-12 col-md-6 col-lg-4 mt-2">
-                    <a class="box-app-link" href="http://player.vimeo.com/video/100890130">
+                    <a class="box-app-link" href="http://player.vimeo.com/video/100890130" target="_blank">
                         <div class="box-app">
-                            <iframe height="560" width="900" class="item-frame" src="http://player.vimeo.com/video/100890130" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
+                            <img class="item-frame" src="./public/img/videos/1.png"></img>
+                            <p class="box-text-app">A Face Recognition Based Multiplayer Mobile Game Application (AIAI 2014)</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 mt-2">
+                    <a class="box-app-link" href="http://player.vimeo.com/video/111666209" target="_blank">
+                        <div class="box-app">
+                            <img class="item-frame" src="./public/img/videos/2.png"></img>
+                            <p class="box-text-app">A Face Recognition Based Multiplayer Mobile Game Application (AIAI 2014)</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 mt-2">
+                    <a class="box-app-link" href="http://player.vimeo.com/video/100890301" target="_blank">
+                        <div class="box-app">
+                            <img class="item-frame" src="./public/img/videos/3.png"></img>
                             <p class="box-text-app">A Face Recognition Based Multiplayer Mobile Game Application (AIAI 2014)</p>
                         </div>
                     </a>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 mt-2">
                     <div class="box-app">
-                        <iframe height="560" width="900" class="item-frame" src="http://player.vimeo.com/video/111666209" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
-                        <p class="box-text-app">Cleaning Up After a Face Tracker: False Positive Removal (ICIP 2014)</p>
-                    </div>
-                </div>
-                <div class="col-12 col-md-6 col-lg-4 mt-2">
-                    <div class="box-app">
-                        <iframe height="560" width="900" class="item-frame" src="http://player.vimeo.com/video/100890301" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
-                        <p class="box-text-app">Facial Expression Recognition on a Smartphone</p>
-                    </div>
-                </div>
-                <div class="col-12 col-md-6 col-lg-4 mt-2">
-                    <div class="box-app">
-                        <iframe height="560" width="900" class="item-frame" src="http://player.vimeo.com/video/153692017" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
+                        <iframe height="560" width="900" class="item-frame" src="https://player.vimeo.com/video/153692017" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
                         <p class="box-text-app">2D-to-3D Facial Expression Transfer (SIU 2016)</p>
                     </div>
                 </div>
