--- a/index.html
+++ b/index.html
@@ -205,28 +205,22 @@
         <div class="container">
             <div class="row justify-content-center mt-5">
                 <div class="col-12 col-md-6 col-lg-4 mt-2">
-                    <a class="box-app-link" href="http://player.vimeo.com/video/100890130" target="_blank">
-                        <div class="box-app">
-                            <img class="item-frame" src="./public/img/videos/1.png"></img>
-                            <p class="box-text-app">A Face Recognition Based Multiplayer Mobile Game Application (AIAI 2014)</p>
-                        </div>
-                    </a>
+                    <div class="box-app">
+                        <iframe height="560" width="900" class="item-frame" src="https://player.vimeo.com/video/100890130" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
+                        <p class="box-text-app">A Face Recognition Based Multiplayer Mobile Game Application (AIAI 2014)</p>
+                    </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 mt-2">
-                    <a class="box-app-link" href="http://player.vimeo.com/video/111666209" target="_blank">
-                        <div class="box-app">
-                            <img class="item-frame" src="./public/img/videos/2.png"></img>
-                            <p class="box-text-app">A Face Recognition Based Multiplayer Mobile Game Application (AIAI 2014)</p>
-                        </div>
-                    </a>
+                    <div class="box-app">
+                        <iframe height="560" width="900" class="item-frame" src="https://player.vimeo.com/video/111666209" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
+                        <p class="box-text-app">Cleaning Up After a Face Tracker: False Positive Removal (ICIP 2014)</p>
+                    </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 mt-2">
-                    <a class="box-app-link" href="http://player.vimeo.com/video/100890301" target="_blank">
-                        <div class="box-app">
-                            <img class="item-frame" src="./public/img/videos/3.png"></img>
-                            <p class="box-text-app">A Face Recognition Based Multiplayer Mobile Game Application (AIAI 2014)</p>
-                        </div>
-                    </a>
+                    <div class="box-app">
+                        <iframe height="560" width="900" class="item-frame" src="https://player.vimeo.com/video/100890301" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
+                        <p class="box-text-app">Facial Expression Recognition on a Smartphone</p>
+                    </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 mt-2">
                     <div class="box-app">
@@ -236,49 +230,49 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 mt-2">
                     <div class="box-app">
-                        <iframe height="560" width="900" class="item-frame" src="http://player.vimeo.com/video/101281305" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
+                        <iframe height="560" width="900" class="item-frame" src="https://player.vimeo.com/video/101281305" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
                         <p class="box-text-app">Real-time Face Swapping in Video Sequences (VISAPP 2012)</p>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 mt-2">
                     <div class="box-app">
-                        <iframe height="560" width="900" class="item-frame" src="http://player.vimeo.com/video/100887880" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
+                        <iframe height="560" width="900" class="item-frame" src="https://player.vimeo.com/video/100887880" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
                         <p class="box-text-app">Automatic Analysis of Facial Attractiveness from Video (ICIP 2014)</p>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 mt-2">
                     <div class="box-app">
-                        <iframe height="560" width="900" class="item-frame" src="http://player.vimeo.com/video/101281400" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
+                        <iframe height="560" width="900" class="item-frame" src="https://player.vimeo.com/video/101281400" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
                         <p class="box-text-app">Real-time Action Unit Intensity Estimation (CVPR4HB 2011)</p>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 mt-2">
                     <div class="box-app">
-                        <iframe height="560" width="900" class="item-frame" src="http://player.vimeo.com/video/165582798" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
+                        <iframe height="560" width="900" class="item-frame" src="https://player.vimeo.com/video/165582798" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
                         <p class="box-text-app">Game Design for Physical Therapy and Rehabilitation Using Kinect (TIPTEKNO 2015)</p>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 mt-2">
                     <div class="box-app">
-                        <iframe height="560" width="900" class="item-frame" src="http://player.vimeo.com/video/101281449" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
+                        <iframe height="560" width="900" class="item-frame" src="https://player.vimeo.com/video/101281449" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
                         <p class="box-text-app">Blink Counter: A Plug-in to Monitor Blink Rate(TIPTEKNO 2015)</p>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 mt-2">
                     <div class="box-app">
-                        <iframe height="560" width="900" class="item-frame" src="http://player.vimeo.com/video/165584012" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
+                        <iframe height="560" width="900" class="item-frame" src="https://player.vimeo.com/video/165584012" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
                         <p class="box-text-app">ITU Virtual Assistant</p>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 mt-2">
                     <div class="box-app">
-                        <iframe height="560" width="900" class="item-frame" src="http://player.vimeo.com/video/101281484" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
+                        <iframe height="560" width="900" class="item-frame" src="https://player.vimeo.com/video/101281484" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
                         <p class="box-text-app">Clothing Matching on a Smartphone</p>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 mt-2">
                     <div class="box-app">
-                        <iframe height="560" width="900" class="item-frame" src="http://player.vimeo.com/video/165582256" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
+                        <iframe height="560" width="900" class="item-frame" src="https://player.vimeo.com/video/165582256" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
                         <p class="box-text-app">Color Splash Game</p>
                     </div>
                 </div>
