--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <nav id="navbar" class="navbar navbar-expand-md navbar-main fixed-top">
 
         <a class="navbar-brand" href="index.html"><img src="public/img/simitlab.png" width="200" style="max-height: 71px;max-width: 200px;" alt=""></a>
-        <a id="nav-collapse-button" class="nav-link no-d-lg "><i id="bars" class="fas fa-bars"></i></a>
+        <a id="nav-collapse-button" class="nav-add mr-3 no-d-lg "><i id="bars" class="fas fa-bars"></i></a>
 
         <!-- Navbar links -->
         <div class="no-d-sm">
