--- a/projects.html
+++ b/projects.html
@@ -78,7 +78,7 @@
         <div class="container-fluid" style="margin-top: 5rem !important">
             <div class="row justify-content-center mt-5">
                 <div class="col-6 col-md-4 text-center project-header-div-left active-left" id="current">
-                    <span class="project-header-text">Curent</span>
+                    <span class="project-header-text">Current</span>
                 </div>
                 <div class="col-6 col-md-4 text-center project-header-div-right" id="past">
                    <span class="project-header-text">Past</span>
