--- a/index.html
+++ b/index.html
@@ -37,30 +37,38 @@
             <li class="nav-item">
               <a class="nav-link" href="publications.html">Publications</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="https://docs.google.com/forms/d/e/1FAIpQLScY3I9sM9CaLL09J5fvv_TACYX7gvxSE7sVn8siRT9GCxbHoQ/viewform" target="_blank">Join</a>
+              </li>
           </ul>
 
         </div>
 
         <div id="collapse-navbar" class="collapse-navbar not-visible d-sm">
             <div class="container collapse-container">
-                <div class="row justify-content-center mb-5">
+                <div class="row justify-content-center mb-3">
                     <div class="col-6">
                        <a href="index.html" class="navlink"> <p class="text-center text-white navbar-small-link">Home</p></a>
                     </div>
                 </div>
-                <div class="row justify-content-center mb-5">
+                <div class="row justify-content-center mb-3">
                     <div class="col-6">
                        <a href="projects.html" class="navlink"> <p class="text-center text-white navbar-small-link">Projects</p></a>
                     </div>
                 </div>
-                <div class="row justify-content-center mb-5">
+                <div class="row justify-content-center mb-3">
                     <div class="col-6">
                         <a href="team.html" class="navlink"> <p class="text-center text-white navbar-small-link">Team</p></a>
                     </div>
                 </div>
-                <div class="row justify-content-center mb-5">
+                <div class="row justify-content-center mb-3">
                     <div class="col-6">
                         <a href="publications.html" class="navlink">  <p class="text-center text-white navbar-small-link">Publications</p> </a>
+                    </div>
+                </div>
+                <div class="row justify-content-center mb-3">
+                    <div class="col-6">
+                        <a href="publications.html" class="navlink"> <p class="text-center text-white navbar-small-link">Join</p> </a>
                     </div>
                 </div>
             </div>
@@ -69,15 +77,29 @@
 
 
       <section id="intro">
-        <div class="container container-home container-fullscreen">
-            <div class="row justify-content-center" style="max-width: 100%;">
-                <div class="col-12 col-md-8 col-lg-6 align-self-center text-center">
-                    <h1 class="main-header mb-5 margin-left-small">Smart Interaction and Machine Intelligence Technologies </h1>
-                    <a href="https://docs.google.com/forms/d/e/1FAIpQLScY3I9sM9CaLL09J5fvv_TACYX7gvxSE7sVn8siRT9GCxbHoQ/viewform?usp=send_form" class="join-button margin-left-small" target="_blank">Join Us!</a>
+
+      </section>
+
+      <div class="owl-carousel owl-theme">
+        <div class="item">
+            <div class="container container-home-2 container-fullscreen">
+                <div class="row justify-content-center" style="max-width: 100%;">
+                    <div class="col-12 col-md-8 col-lg-6 align-self-center text-center">
+                        <h1 class="main-header mb-5 margin-left-small">Smart Interaction and Machine Intelligence Technologies </h1>
+                    </div>
                 </div>
             </div>
         </div>
-      </section>
+        <div class="item">
+            <div class="container container-home container-fullscreen">
+                <div class="row justify-content-center" style="max-width: 100%;">
+                    <div class="col-12 col-md-8 col-lg-6 align-self-center text-center">
+                        <h1 class="main-header mb-5 margin-left-small">Smart Interaction and Machine Intelligence Technologies </h1>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
