--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
             <li class="nav-item">
               <a class="nav-link" href="publications.html">Publications</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="https://docs.google.com/forms/d/e/1FAIpQLScY3I9sM9CaLL09J5fvv_TACYX7gvxSE7sVn8siRT9GCxbHoQ/viewform" target="_blank">Join</a>
+            <li class="nav-item align-self-center">
+                <a class="nav-link-2 join-button" href="https://docs.google.com/forms/d/e/1FAIpQLScY3I9sM9CaLL09J5fvv_TACYX7gvxSE7sVn8siRT9GCxbHoQ/viewform" target="_blank">Join</a>
               </li>
           </ul>
 
@@ -112,26 +112,64 @@
                 </div>
             </div>
         </div>
-        <div class="container" style="margin-top:5rem">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-10 col-lg-4" style="margin-top:4.5rem;">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-12 about-prof-img">
+
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12 about-prof">
+                               <span class="about-prof-text">Prof. Dr. Hazım Ekenel</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-10 col-lg-8" style="margin-top:4.5rem">
+                    <p class="mt-1">
+                    SiMiT Lab is directed by Prof. Dr.-Ing. Hazım Kemal Ekenel,
+                    who has over ten years of experience in computer vision and
+                    machine learning. Previously, he has founded the Facial Image
+                    Processing and Analysis Group in Karlsruhe Institute of
+                    Technology (KIT), Germany with a young investigator grant
+                    he was awarded within the framework of the Excellence
+                    Initiative of German Research Foundation (DFG) in 2010.
+                    In 2008, he has received the EBF European Biometric Research
+                    Award for his contributions to the field of face recognition
+                    during his doctoral studies.
+                    SiMiT Lab’s objective is to conduct research on
+                    computer vision and deep learning, specifically
+                    face analysis and other biometric traits within the
+                    scope of the international and industrial research
+                    projects at the lab.
+                    <br><br>
+                    <span style="font-size: 140%;font-weight:500;">Biography:</span>
+                    <br><br>
+                    Dr. Hazım Kemal Ekenel is a Professor at ITU Department of Computer Engineering, where he directs the Smart Interaction and Machine Intelligence Technologies (SiMiT) Lab. He is also with the Signal Processing Lab (LTS5) of EPFL as a host professor.
+
+                    His aim is to leverage computer vision, machine learning, and deep learning techniques in order to build interactive and intelligent systems that ease people's lives and enhance their social interactions. He also focuses on assistive technologies for people with disabilities and healthcare applications.
+                    <br><br>
+                    He has over fifteen years of experience in computer vision and machine learning with a focus on face analysis and human perception. He has published more than 100 peer reviewed publications in prestigious international journals, conferences, and workshops in the related fields, which have received over 2800 citations. His h-index is 28.
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <p style="line-height: 25px;">
-                        SiMiT Lab’s objective is to conduct research on
-                        computer vision and deep learning, specifically
-                        face analysis and other biometric traits within the
-                        scope of the international and industrial research
-                        projects at the lab.
-                        <br><br>
-                        SiMiT Lab’s research is categorized into three main groups:
-                    </p>
-
+                    <h1 class="header" style="font-size: 140%;">Study Groups</h1>
                 </div>
             </div>
         </div>
 
         <div class="container" style="margin-top:2rem">
             <div class="row justify-content-center">
-                <div class="col-12 col-md-6 col-lg-4">
+                <div class="col-11 col-md-6 col-lg-4">
                     <div class="box">
                         <img src="public/img/icons/image-processing.png" width="64" height="64" class="align-self-center mt-5" alt="">
                         <p class="box-text">Core facial image processing</p>
@@ -152,7 +190,7 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-md-6 col-lg-4">
+                <div class="col-11 col-md-6 col-lg-4">
                     <div class="box">
                         <img src="public/img/icons/face-detection.png" width="64" height="64" class="align-self-center mt-5" alt="">
                         <p class="box-text">Abstract & subjective
@@ -174,7 +212,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4">
+                <div class="col-11 col-md-6 col-lg-4">
                     <div class="box">
                         <img src="public/img/icons/games.png" width="64" height="64" class="align-self-center mt-5" alt="">
                         <p class="box-text">Mobile gaming
@@ -195,20 +233,6 @@
                             </li>
                         </ul>
                     </div>
-                </div>
-                <div class="col-12" style="margin-top:4.5rem">
-                    <p class="mt-1">
-                    SiMiT Lab is directed by Prof. Dr.-Ing. Hazım Kemal Ekenel,
-                    who has over ten years of experience in computer vision and
-                    machine learning. Previously, he has founded the Facial Image
-                    Processing and Analysis Group in Karlsruhe Institute of
-                    Technology (KIT), Germany with a young investigator grant
-                    he was awarded within the framework of the Excellence
-                    Initiative of German Research Foundation (DFG) in 2010.
-                    In 2008, he has received the EBF European Biometric Research
-                    Award for his contributions to the field of face recognition
-                    during his doctoral studies.
-                    </p>
                 </div>
             </div>
         </div>
