--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         </div>
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-10 col-lg-4" style="margin-top:4.5rem;">
+                <div class="col-10 col-sm-8 col-lg-4" style="margin-top:4.5rem;">
                     <div class="container-fluid">
                         <div class="row">
                             <div class="col-12 about-prof-img">
@@ -122,7 +122,7 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-12 about-prof">
+                            <div class="col-12 about-prof text-center">
                                <span class="about-prof-text">Prof. Dr. Hazım Ekenel</span>
                             </div>
                         </div>
@@ -130,6 +130,12 @@
                 </div>
 
                 <div class="col-10 col-lg-8" style="margin-top:4.5rem">
+                    <h2>Prof. Dr. Hazım Ekenel</h2>
+                    <a href="mailto:ekenel@itu.edu.tr"><h6 style="color:blue" class="mt-2">ekenel@itu.edu.tr</h6></a>
+                    <h6 style="color:grey">Faculty of Computer and Informatics <br>
+                        Istanbul Technical University <br>
+                        Maslak, İstanbul, 34469</h6>
+                    <hr>
                     <p class="mt-1">
                     SiMiT Lab is directed by Prof. Dr.-Ing. Hazım Kemal Ekenel,
                     who has over ten years of experience in computer vision and
@@ -171,7 +177,7 @@
             <div class="row justify-content-center">
                 <div class="col-11 col-md-6 col-lg-4">
                     <div class="box">
-                        <img src="public/img/icons/image-processing.png" width="64" height="64" class="align-self-center mt-5" alt="">
+                        <!-- <img src="public/img/icons/image-processing.png" width="64" height="64" class="align-self-center mt-5" alt=""> -->
                         <p class="box-text">Core facial image processing</p>
                         <ul class="box-list">
                             <li>
@@ -192,7 +198,7 @@
 
                 <div class="col-11 col-md-6 col-lg-4">
                     <div class="box">
-                        <img src="public/img/icons/face-detection.png" width="64" height="64" class="align-self-center mt-5" alt="">
+                       <!--  <img src="public/img/icons/face-detection.png" width="64" height="64" class="align-self-center mt-5" alt=""> -->
                         <p class="box-text">Abstract & subjective
                             face analysis
                             </p>
@@ -214,7 +220,7 @@
                 </div>
                 <div class="col-11 col-md-6 col-lg-4">
                     <div class="box">
-                        <img src="public/img/icons/games.png" width="64" height="64" class="align-self-center mt-5" alt="">
+                       <!--  <img src="public/img/icons/games.png" width="64" height="64" class="align-self-center mt-5" alt=""> -->
                         <p class="box-text">Mobile gaming
                             </p>
                         <ul class="box-list">
