--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
-  <body id="body" class="overflow-auto ">
+  <body id="body" class="overflow-auto body-overflow">
+
+    <div class="loader-container">
+        <div class="loader">
+
+        </div>
+    </div>
 
     <nav id="navbar" class="navbar navbar-expand-md navbar-main fixed-top">
 
@@ -159,7 +165,7 @@
 
                     His aim is to leverage computer vision, machine learning, and deep learning techniques in order to build interactive and intelligent systems that ease people's lives and enhance their social interactions. He also focuses on assistive technologies for people with disabilities and healthcare applications.
                     <br><br>
-                    He has over fifteen years of experience in computer vision and machine learning with a focus on face analysis and human perception. He has published more than 100 peer reviewed publications in prestigious international journals, conferences, and workshops in the related fields, which have received over 2800 citations. His h-index is 28.
+                    He has over fifteen years of experience in computer vision and machine learning with a focus on face analysis and human perception. He has published more than 100 peer reviewed publications in prestigious international journals, conferences, and workshops in the related fields, which have received over 3600 citations. His h-index is 32.
                     </p>
                 </div>
             </div>
@@ -243,7 +249,7 @@
             </div>
         </div>
       </section>
-
+      <hr>
       <section id="applications">
         <div class="container">
             <div class="row">
