--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
-  <body id="body" class="overflow-auto ">
+  <body id="body" class="overflow-auto">
+
 
     <nav id="navbar" class="navbar navbar-expand-md navbar-main fixed-top">
 
@@ -26,10 +27,10 @@
         <div class="no-d-sm">
           <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="index.html">Home</a>
+                <a class="nav-link active" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link  active" href="projects.html">Projects</a>
+              <a class="nav-link" href="projects.html">Projects</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="team.html">Team</a>
@@ -37,30 +38,38 @@
             <li class="nav-item">
               <a class="nav-link" href="publications.html">Publications</a>
             </li>
+            <li class="nav-item align-self-center">
+                <a class="nav-link-2 join-button" href="https://docs.google.com/forms/d/e/1FAIpQLScY3I9sM9CaLL09J5fvv_TACYX7gvxSE7sVn8siRT9GCxbHoQ/viewform" target="_blank">Join</a>
+              </li>
           </ul>
 
         </div>
 
         <div id="collapse-navbar" class="collapse-navbar not-visible d-sm">
             <div class="container collapse-container">
-                <div class="row justify-content-center mb-5">
+                <div class="row justify-content-center mb-3">
                     <div class="col-6">
                        <a href="index.html" class="navlink"> <p class="text-center text-white navbar-small-link">Home</p></a>
                     </div>
                 </div>
-                <div class="row justify-content-center mb-5">
+                <div class="row justify-content-center mb-3">
                     <div class="col-6">
                        <a href="projects.html" class="navlink"> <p class="text-center text-white navbar-small-link">Projects</p></a>
                     </div>
                 </div>
-                <div class="row justify-content-center mb-5">
+                <div class="row justify-content-center mb-3">
                     <div class="col-6">
                         <a href="team.html" class="navlink"> <p class="text-center text-white navbar-small-link">Team</p></a>
                     </div>
                 </div>
-                <div class="row justify-content-center mb-5">
+                <div class="row justify-content-center mb-3">
                     <div class="col-6">
                         <a href="publications.html" class="navlink">  <p class="text-center text-white navbar-small-link">Publications</p> </a>
+                    </div>
+                </div>
+                <div class="row justify-content-center mb-3">
+                    <div class="col-6">
+                        <a href="publications.html" class="navlink"> <p class="text-center text-white navbar-small-link">Join</p> </a>
                     </div>
                 </div>
             </div>
