--- a/publications.html
+++ b/publications.html
@@ -17,7 +17,8 @@
 </head>
   <body id="body" class="overflow-auto">
 
-    <nav id="navbar" class="navbar navbar-expand-md navbar-main navbar-none fixed-top">
+
+    <nav id="navbar" class="navbar navbar-expand-md navbar-main fixed-top">
 
         <a class="navbar-brand" href="index.html"><img src="public/img/simitlab.png" width="200" style="max-height: 71px;max-width: 200px;" alt=""></a>
         <a id="nav-collapse-button" class="nav-add mr-3 no-d-lg "><i id="bars" class="fas fa-bars"></i></a>
@@ -26,7 +27,7 @@
         <div class="no-d-sm">
           <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="index.html">Home</a>
+                <a class="nav-link active" href="index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="projects.html">Projects</a>
@@ -35,32 +36,40 @@
               <a class="nav-link" href="team.html">Team</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link  active" href="publications.html">Publications</a>
+              <a class="nav-link" href="publications.html">Publications</a>
             </li>
+            <li class="nav-item align-self-center">
+                <a class="nav-link-2 join-button" href="https://docs.google.com/forms/d/e/1FAIpQLScY3I9sM9CaLL09J5fvv_TACYX7gvxSE7sVn8siRT9GCxbHoQ/viewform" target="_blank">Join</a>
+              </li>
           </ul>
 
         </div>
 
         <div id="collapse-navbar" class="collapse-navbar not-visible d-sm">
             <div class="container collapse-container">
-                <div class="row justify-content-center mb-5">
+                <div class="row justify-content-center mb-3">
                     <div class="col-6">
                        <a href="index.html" class="navlink"> <p class="text-center text-white navbar-small-link">Home</p></a>
                     </div>
                 </div>
-                <div class="row justify-content-center mb-5">
+                <div class="row justify-content-center mb-3">
                     <div class="col-6">
                        <a href="projects.html" class="navlink"> <p class="text-center text-white navbar-small-link">Projects</p></a>
                     </div>
                 </div>
-                <div class="row justify-content-center mb-5">
+                <div class="row justify-content-center mb-3">
                     <div class="col-6">
                         <a href="team.html" class="navlink"> <p class="text-center text-white navbar-small-link">Team</p></a>
                     </div>
                 </div>
-                <div class="row justify-content-center mb-5">
+                <div class="row justify-content-center mb-3">
                     <div class="col-6">
                         <a href="publications.html" class="navlink">  <p class="text-center text-white navbar-small-link">Publications</p> </a>
+                    </div>
+                </div>
+                <div class="row justify-content-center mb-3">
+                    <div class="col-6">
+                        <a href="publications.html" class="navlink"> <p class="text-center text-white navbar-small-link">Join</p> </a>
                     </div>
                 </div>
             </div>
