--- a/projects.html
+++ b/projects.html
@@ -69,7 +69,7 @@
                 </div>
                 <div class="row justify-content-center mb-3">
                     <div class="col-6">
-                        <a href="publications.html" class="navlink"> <p class="text-center text-white navbar-small-link">Join</p> </a>
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLScY3I9sM9CaLL09J5fvv_TACYX7gvxSE7sVn8siRT9GCxbHoQ/viewform" target="_blank" class="navlink"> <p class="text-center text-white navbar-small-link">Join</p> </a>
                     </div>
                 </div>
             </div>
@@ -449,7 +449,7 @@
                     </div>
                     <div class="row mt-5">
                        <div class="col-12 text-center">
-                            <p class="copyright">Copyright 2020 &copy; İTÜ SIMIT LAB</p>
+                            <p class="copyright">Copyright 2021 &copy; İTÜ SIMIT LAB</p>
                        </div>
                     </div>
                 </div>
