--- a/team.html
+++ b/team.html
@@ -69,7 +69,7 @@
                 </div>
                 <div class="row justify-content-center mb-3">
                     <div class="col-6">
-                        <a href="publications.html" class="navlink"> <p class="text-center text-white navbar-small-link">Join</p> </a>
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLScY3I9sM9CaLL09J5fvv_TACYX7gvxSE7sVn8siRT9GCxbHoQ/viewform" target="_blank class="navlink"> <p class="text-center text-white navbar-small-link">Join</p> </a>
                     </div>
                 </div>
             </div>
