--- a/projects.html
+++ b/projects.html
@@ -27,10 +27,10 @@
         <div class="no-d-sm">
           <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link active" href="index.html">Home</a>
+                <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="projects.html">Projects</a>
+              <a class="nav-link active" href="projects.html">Projects</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="team.html">Team</a>
@@ -86,10 +86,10 @@
 
         <div class="container-fluid" style="margin-top: 5rem !important">
             <div class="row justify-content-center mt-5">
-                <div class="col-6 col-md-4 text-center project-header-div-left active-left" id="current">
+                <div class="col-5 col-md-4 text-center project-header-div-left active-left" id="current">
                     <span class="project-header-text">Current</span>
                 </div>
-                <div class="col-6 col-md-4 text-center project-header-div-right" id="past">
+                <div class="col-5 col-md-4 text-center project-header-div-right" id="past">
                    <span class="project-header-text">Past</span>
                 </div>
             </div>
