--- a/publications.html
+++ b/publications.html
@@ -27,7 +27,7 @@
         <div class="no-d-sm">
           <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link active" href="index.html">Home</a>
+                <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="projects.html">Projects</a>
@@ -36,7 +36,7 @@
               <a class="nav-link" href="team.html">Team</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="publications.html">Publications</a>
+              <a class="nav-link active" href="publications.html">Publications</a>
             </li>
             <li class="nav-item align-self-center">
                 <a class="nav-link-2 join-button" href="https://docs.google.com/forms/d/e/1FAIpQLScY3I9sM9CaLL09J5fvv_TACYX7gvxSE7sVn8siRT9GCxbHoQ/viewform" target="_blank">Join</a>
