--- a/team.html
+++ b/team.html
@@ -27,13 +27,13 @@
         <div class="no-d-sm">
           <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link active" href="index.html">Home</a>
+                <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="projects.html">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="team.html">Team</a>
+              <a class="nav-link active" href="team.html">Team</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="publications.html">Publications</a>
